﻿i-MSCP ChangeLog
~~~~~~~~~~~~~~~~
------------------------------------------------------------------------------------------------------------------------
Git Master
------------------------------------------------------------------------------------------------------------------------

Tickets:
	- Fixed #782: Bug - Notice: A non well formed numeric value encountered...

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.3
------------------------------------------------------------------------------------------------------------------------

2013-06-08: Torsten Widmann
	- RELEASE i-MSCP 1.1.0-rc2.3

ENGINE:
	- Fixed: Error on backup: Unable to change mode for...

GUI:
	- Fixed: Unable to add hosting plan (reseller level)
	- Fixed: Possible missing properties (hosting_plans)

SETUP:
	- Fixed: Pressed feature is broken

Tickets:
	- Fixed #647: Bug - Setup - Unable to reconfigure IP addresses
	- Fixed #776: Bug - Hosting plans attribs aren't updated with the migration
	- Fixed #777: Bug - Autoinstaller - Two entries for imscp-autoinstall option -h
	- Fixed #778: Bug - Autoinstaller - Exit code 5 in non-interactive mode --nopromt
	- Fixed #781: Bug - Network card not found

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc2.2
------------------------------------------------------------------------------------------------------------------------

2013-06-04: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc2.2

GUI:
	- Fixed: Custom DNS feature not working due to missing files

VENDOR:
	- Updated jQuery to v1.10.1
	- Updated jQuery UI to v1.10.3

Tickets:
	Fixed #640: Bug - AliasSubdomain won't work when Alias is a redirect
	Fixed #767: Update -jQuery 1.10.1 released
	Fixed #769: Review - Language issue in imscp GUI
